--- a/bib/EXTLex.bib
+++ b/bib/EXTLex.bib
@@ -1,6 +1,6 @@
 @misc{Paetzold13extlex,
 author = {Gustavo Henrique Paetzold},
-title = {EXTLex: Lexical analysis for compilers with error detection.},
+title = {EXTLex: Lexical analysis for compilers with error detection},
 howpublished = {http://ghpaetzold.github.io/extlex/},
 year = {2013}
 }
