Added coling reference

--- a/bib/COLING_2016_User_Studies_NNS.bib
+++ b/bib/COLING_2016_User_Studies_NNS.bib
@@ -1,4 +1,4 @@
-@inproceedings{paetzold16aaai,
+@inproceedings{paetzold16nns,
 title = {Understanding the Lexical Simplification Needs of Non-Native Speakers of English},
 author  = {Gustavo Henrique Paetzold and Lucia Specia},
 booktitle = {Proceedings of The 26th COLING},
