--- a/bib/QATS_2016_PLUMBErr.bib
+++ b/bib/QATS_2016_PLUMBErr.bib
@@ -2,5 +2,6 @@
   title={PLUMBErr: An Automatic Error Identification Framework for Lexical Simplification},
   author={Paetzold, Gustavo Henrique and Specia, Lucia},
   booktitle={Proceedings of the 1st QATS},
+  pages={1--9},
   year={2016}
 }
